# projekt_p4

./: .gitignore  README.md
install/: local_setup.sh  setup.ps1  setup.sh
kontrol_loop_work_spase/: disherder.csv  error.csv  koe.sh  koe_drone_rc.sh  koe_drone_rek.sh  laun.sh  move_file.sh  tids_delta.csv  volosty.csv
kontrol_loop_work_spase/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
kontrol_loop_work_spase/log/: latest_build
kontrol_loop_work_spase/src/costom_interface/: CMakeLists.txt
kontrol_loop_work_spase/src/costom_interface/msg/: WantedVelocities.msg
kontrol_loop_work_spase/src/costom_interface/srv/: .Velocities.srv.swp  Velocities.srv
kontrol_loop_work_spase/src/vel_err/: CMakeLists.txt  setup.cfg  setup.py
kontrol_loop_work_spase/src/vel_err/costom_interface/msg/: ViconInfo.msg
kontrol_loop_work_spase/src/vel_err/costom_interface/srv/: .Velocities.srv.swp
kontrol_loop_work_spase/src/vel_err/launch/: drone_regulering.launch.py  drone_regulering.py
kontrol_loop_work_spase/src/vel_err/vel_err/: 4  7  Velocities_get.py  drone_rc.py  drone_rek.py  err.cpp  err.cpp~  err.py  first_node.py  req_vel.gamel.py  tello_drone.py
log/: latest_build
plot/: 2_var.p  2_var_2.p  2_var_3.p  p.p  plot.py  plot_2.py  plot_all.sh  test.p  test.txt
shcript/: Telloo.py  Telo.py  login_ip.sh  mount.sh  port_raler_haris.sh  telle_wifi.sh  tello3_2.py  teste  teste.py  vis_wifi.sh
turtlebot3_ws/: .gitignore
vicon_udp_hopper/: besked.txt  reflikter.py  reflikter_enkel_optaget.py  reflikter_stille.py  reflikter_to_optaget.py
(+263 files in other folders)
